# UnifPython

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: django-ci-cd.yml
adrs/0000-celery-vs-aiohttp-LMS/: index.html
adrs/0001-celery-vs-aiohttp-telegram/: index.html
adrs/template/: index.html
bot/bot_main/: index.html
bot/bot_services/: index.html
common/common_services_cookie/: index.html
docs/: logic-flowchart.md
docs/adrs/: 0000-celery-vs-aiohttp-LMS.md  0001-celery-vs-aiohttp-telegram.md  template.md
docs/bot/: bot_main.md  bot_services.md
docs/common/: common_services_cookie.md
docs/lms_public/: lms_public_schedule_tasks.md  lms_public_services_change_handler.md  lms_public_services_parsers.md  lms_public_services_scheduled_tasks.md  lms_public_services_scrapers.md
lms_public/lms_public_schedule_tasks/: index.html
lms_public/lms_public_services_change_handler/: index.html
lms_public/lms_public_services_parsers/: index.html
lms_public/lms_public_services_scheduled_tasks/: index.html
lms_public/lms_public_services_scrapers/: index.html
logic-flowchart/: index.html
nginx/conf/: default.conf
search/: search_index.json
src/: manage.py
src/bot/: main.py  services.py  tasks.py
src/common/: admin.py  models.py
src/core_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/lms_public/: admin.py  apps.py  models.py  schedule_tasks.py  tasks.py
unif-bruno/: bruno.json  home page.bru
(+8 files in other folders)
